--- a/src/styles/global-style.css
+++ b/src/styles/global-style.css
@@ -1,9 +1,8 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+  font-family: 'Mulish', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background: #f6f6f8;
 }
 
 a {
@@ -11,6 +10,12 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+}
+
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
