--- a/src/styles/global-style.css
+++ b/src/styles/global-style.css
@@ -6,7 +6,7 @@ html,
 body {
   font-family: 'Mulish', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background: #f6f6f8;
+  background: #F6F7F9;
 }
 
 a {
