--- a/src/styles/global-style.css
+++ b/src/styles/global-style.css
@@ -7,6 +7,8 @@ body {
   font-family: 'Mulish', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background: #F6F7F9;
+  scroll-behavior: smooth;
+  -webkit-tap-highlight-color: transparent;
 }
 
 a {
