font optimization and self hosted

--- a/src/styles/global-style.css
+++ b/src/styles/global-style.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'Mulish';
+  font-style: normal;
+  font-weight: 200 1000;
+  font-display: fallback;
+  src: url('/fonts/mulish-var-latin.woff2') format('woff2');
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
