--- a/src/styles/global-style.css
+++ b/src/styles/global-style.css
@@ -43,3 +43,13 @@ ul {
   padding: 0;
   margin: 0;
 }
+
+.react-modal-sheet-header {
+  background-color: #EAEFF4;
+}
+.react-modal-sheet-drag-indicator {
+  background: #D5DDE5;
+}
+.react-modal-sheet-content {
+  background-color: #EAEFF4;
+}
