--- a/src/styles/global-style.css
+++ b/src/styles/global-style.css
@@ -18,6 +18,10 @@
   .gradient-1 {
     background: linear-gradient(100.14deg, #E5A956 0%, #F0C27A 100%);
   }
+
+  .showPopUp {
+    visibility: visible;
+  }
 }
 
 html,
