--- a/src/styles/global-style.css
+++ b/src/styles/global-style.css
@@ -31,6 +31,7 @@ body {
   background: #F6F7F9;
   scroll-behavior: smooth;
   -webkit-tap-highlight-color: transparent;
+  overflow-x: hidden;
 }
 
 a {
